chore(Memory limit): allow JVM to be aware of docker memory limits (#995)