@@ -595,8 +595,8 @@
                 <!-- Default failsafe configuration -->
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
-                <configuration>
-                    <argLine>-Xmx1024m -XX:+HeapDumpOnOutOfMemoryError</argLine>
+                <configuration combine.children="append">
+                    <argLine combine.self="append">-Xmx1024m -XX:+HeapDumpOnOutOfMemoryError -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap</argLine>
                 </configuration>
                 <executions>
                     <execution>
@@ -607,6 +607,14 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration combine.children="append">
+                    <!-- for JVM to know memory limits when running inside docker: -->
+                    <argLine combine.self="append">-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap</argLine>
+                </configuration>
             </plugin>
         </plugins>
     </build>
@@ -949,7 +957,9 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-failsafe-plugin</artifactId>
-                        <configuration>
+                        <configuration combine.children="append">
+                            <!-- for JVM to know memory limits when running inside docker: -->
+                            <argLine combine.self="append">-Xmx1024m -XX:+HeapDumpOnOutOfMemoryError -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap</argLine>
                             <systemPropertyVariables>
                                 <sysprop.bonita.db.vendor>postgres</sysprop.bonita.db.vendor>
                                 <sysprop.bonita.bdm.db.vendor>postgres</sysprop.bonita.bdm.db.vendor>
@@ -1005,7 +1015,9 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-failsafe-plugin</artifactId>
-                        <configuration>
+                        <configuration combine.children="append">
+                            <!-- for JVM to know memory limits when running inside docker: -->
+                            <argLine combine.self="append">-Xmx1024m -XX:+HeapDumpOnOutOfMemoryError -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap</argLine>
                             <systemPropertyVariables>
                                 <sysprop.bonita.db.vendor>mysql</sysprop.bonita.db.vendor>
                                 <sysprop.bonita.bdm.db.vendor>mysql</sysprop.bonita.bdm.db.vendor>
@@ -1066,7 +1078,9 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-failsafe-plugin</artifactId>
-                        <configuration>
+                        <configuration combine.children="append">
+                            <!-- for JVM to know memory limits when running inside docker: -->
+                            <argLine combine.self="append">-Xmx1024m -XX:+HeapDumpOnOutOfMemoryError -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap</argLine>
                             <systemPropertyVariables>
                                 <sysprop.bonita.db.vendor>oracle</sysprop.bonita.db.vendor>
                                 <sysprop.bonita.bdm.db.vendor>oracle</sysprop.bonita.bdm.db.vendor>
